results and discussion

--- a/report/main.tex
+++ b/report/main.tex
@@ -22,11 +22,11 @@
 \input{abstract.tex}
 \input{keywords.tex}
 %\input{introduction.tex}
-%\input{background.tex}
+\input{background.tex}
 %\input{method.tex}
 %\input{evaluation.tex}
-%\input{summary.tex}
-%\input{future.tex}
+\input{results.tex}
+\input{future.tex}
 \input{acknowledgments.tex}
 %\bibliographystyle{ieeetran}
 %\bibliography{bibliography}
