--- a/report/main.tex
+++ b/report/main.tex
@@ -21,13 +21,12 @@
 \input{author.tex}
 \input{abstract.tex}
 \input{keywords.tex}
-%\input{introduction.tex}
+\input{introduction.tex}
 \input{background.tex}
-%\input{method.tex}
-%\input{evaluation.tex}
+\input{method.tex}
 \input{results.tex}
 \input{future.tex}
 \input{acknowledgments.tex}
-%\bibliographystyle{ieeetran}
-%\bibliography{bibliography}
+\bibliographystyle{ieeetran}
+\bibliography{bibliography}
 \end{document}
