--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -17,3 +17,20 @@ pages={14-17},
 keywords={audio signal processing;cepstral analysis;particle swarm optimisation;signal classification;AudioDat sound database show improvement;LSF;SFX;ZCR;audio feature comparison;audio pattern searching;elementary sound based audio classification;first order time derivative;frequency cepstral coefficient;line spectral frequency;particle swarm optimization algorithm;second order time derivative;zero crossing rate;Computational modeling;Decoding;Feature extraction;Hidden Markov models;Mel frequency cepstral coefficient;Speech;Vectors;audio features;elementary sounds;pattern modeling},
 doi={10.1109/DT.2013.6566278},
 month={May},}
+
+@ARTICLE {danne1,
+    author  = "M. Deepika, A Nagalinga Rajan",
+    title   = "Automatic Identification of Bird Species from the Recorded Bird Sing Using ART Approach",
+    journal = "IJIRSET International Conference on Innovations in Engineering, Madurai, Tamil Nadu, India",
+    year    = "2014"
+}
+
+@INPROCEEDINGS{1566472, 
+author={B. Raj and R. Singh},
+booktitle={Automatic Speech Recognition and Understanding, 2005 IEEE Workshop on},
+title={Reconstructing spectral vectors with uncertain spectrographic masks for robust speech recognition},
+year={2005},
+pages={65-70},
+keywords={least mean squares methods;spectrometers;speech recognition;speech synthesis;MMSE algorithm;missing-feature methods;noisy speech;reliability;robust speech recognition;soft masks;spectrogram reconstruction;uncertain spectrographic masks;Automatic speech recognition;Cepstral analysis;Noise level;Noise robustness;Reconstruction algorithms;Signal to noise ratio;Spectrogram;Speech enhancement;Speech recognition;US Department of Transportation},
+doi={10.1109/ASRU.2005.1566472},
+month={Nov},}
