--- a/report/keywords.tex
+++ b/report/keywords.tex
@@ -1,3 +1,4 @@
 \begin{IEEEkeywords}
- A; B; C;
+case-based reasoning; feature extraction; peiodogram; spectrogram; classification;
+audio;
 \end{IEEEkeywords}
