--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -34,3 +34,13 @@ pages={65-70},
 keywords={least mean squares methods;spectrometers;speech recognition;speech synthesis;MMSE algorithm;missing-feature methods;noisy speech;reliability;robust speech recognition;soft masks;spectrogram reconstruction;uncertain spectrographic masks;Automatic speech recognition;Cepstral analysis;Noise level;Noise robustness;Reconstruction algorithms;Signal to noise ratio;Spectrogram;Speech enhancement;Speech recognition;US Department of Transportation},
 doi={10.1109/ASRU.2005.1566472},
 month={Nov},}
+
+@INPROCEEDINGS{6497946, 
+author={M. D. Kamaladas and M. M. Dialin}, 
+booktitle={Signal Processing Image Processing Pattern Recognition (ICSIPR), 2013 International Conference on}, 
+title={Fingerprint extraction of audio signal using wavelet transform}, 
+year={2013}, 
+pages={308-312}, 
+keywords={acoustic signal processing;audio databases;audio watermarking;content-based retrieval;feature extraction;music;pattern matching;wavelet transforms;acoustic characteristics;audio data;audio database;audio information;audio quality;audio signal;audio summarization;computer technology;content-based compact signature;digital audio fingerprinting;feature extraction;fingerprint extraction;fingerprint matching algorithm;fingerprint size reduction;music files;query processing;song search;storage devices;wavelet transform;AWGN;Europe;Fingerprint recognition;Robustness;Wavelet domain;AWGN;Audio fingerprinting;Wavelet Decomposition;Wavelet Transform;Zero crossing rate}, 
+doi={10.1109/ICSIPR.2013.6497946}, 
+month={Feb},}
