--- a/report/keywords.tex
+++ b/report/keywords.tex
@@ -1,4 +1,4 @@
 \begin{IEEEkeywords}
-case-based reasoning; feature extraction; peiodogram; spectrogram; classification;
+case-based reasoning; feature extraction; periodogram; spectrogram; classification;
 audio;
 \end{IEEEkeywords}
