--- a/report/author.tex
+++ b/report/author.tex
@@ -10,7 +10,7 @@
 MDH university --- Västerås, Sweden\\
 Email:
 \IEEEauthorrefmark{1}eas12003@student.mdh.se,
-\IEEEauthorrefmark{2}jji15003@student.mdh.se,
+\IEEEauthorrefmark{2}aem09002@student.mdh.se,
 \IEEEauthorrefmark{3}jam12003@student.mdh.se,\\
 \IEEEauthorrefmark{4}sir15001@student.mdh.se}
 }
