--- a/report/background.tex
+++ b/report/background.tex
@@ -68,11 +68,5 @@ only works with stationary noise. Non-stationary noise is even more error prone.
  
  
 
-TODO Rewrite so it is not a direct copy \cite{6497946}.
-Due to the massive growth in computer technology enormous amount of music files are shared in the internet. The storage devices of music files are also changed from cassette tapes to MP3 players, mobile phones, DVD players. In order to solve problems in searching the needed songs among mass audio information, digital audio fingerprinting is involved. Audio fingerprint is a content based compact signature, which summarizes the audio. Fingerprinting systems extracts the acoustic characteristics of the audio and store it as a fingerprint and store it in a database. When the unknown, short snippet of an audio given as query, it calculates its characteristics and compared it to the stored database. Using the fingerprint matching algorithms, the particular audio data was successfully identified even if the audio data has been distorted severely. However the size of the fingerprint per music file is increased, then the amount of songs with their fingerprints in the database is less. So, a novel method proposed to reduce the size of the fingerprints thereby increasing the amount of songs stored in the database. The proposed method uses the wavelet transform for extracting the features so it is effectively used for identification even if the audio quality of the audio has been changed and the amount of fingerprints generated also less.
-
-Wavelet transform is a local transformation on a signal in Time and Frequency domains, which can effectively extract information from the signal, and do multi-scale detailed analysis on a function or signal by functions such as scaling and translation, thereby can solve many difficult issues which cannot be solved by the Fourier transform.
-
-The proposed method uses the fingerprint extraction algorithm in time and frequency domains using wavelet transform. The audio signal was decomposed into 5-layer wavelet, and then calculated the energy distribution center, the energy of sub-band in wavelet domain, and the variance of wavelet coefficient. Finally, by using the results Calculated as the parameters of the audio fingerprints, the 8-bit fingerprint block per frame was generated. The block diagram for the proposed method is shown in fig (2)
-
-By using this algorithm the number of fingerprints per audio file is reduced. This leads to reduced search time and less memory requirement. Also, using the technique audio identification can be done even when the quality of the audio waveform.
+Paper \cite{6497946} present a method to reduce the number of fingerprints or cases by increasing the fingerprint size which will improve memory consumtion and serch time.
+"The proposed method uses the fingerprint extraction algorithm in time and frequency domains using wavelet transform. The audio signal was decomposed into 5-layer wavelet, and then calculated the energy distribution center, the energy of sub-band in wavelet domain, and the variance of wavelet coefficient. Finally, by using the results Calculated as the parameters of the audio fingerprints, the 8-bit fingerprint block per frame was generated" \cite{6497946}.
