--- a/report/results.tex
+++ b/report/results.tex
@@ -10,7 +10,7 @@ The tests shows that using euclidian and manhattan distance does not yield accur
 Multiple test with canberra distance with different weight configuration have the most accurate result.
 
 List of possable high accuracy configuration.
-This may not be the best configuration beacause it is done by trial and error, but it yields accurate results.
+These configurations is found by trial and error and therefore should not be the perfect result.
 Config 1: Canberra, FFT Peak 1 Delta, FFT Area Delta.
 Config 2: Canberra, FFT Peak 1.
 Config 3: Canberra, FFT Peak 1, FFT Area Delta.
