--- a/report/main.tex
+++ b/report/main.tex
@@ -25,7 +25,7 @@
 \input{background.tex}
 \input{method.tex}
 \input{results.tex}
-\input{future.tex}
+\input{summary.tex}
 \input{acknowledgments.tex}
 \bibliographystyle{ieeetran}
 \bibliography{bibliography}
