--- a/report/acknowledgments.tex
+++ b/report/acknowledgments.tex
@@ -1,9 +1,3 @@
 \section{Acknowledgments}
-The authors wish to express their gratitude to our customer, Kristian Sandström
-(Principal Scientist, ABB) for providing us the opportunity to participate in
-the real-time operating system development project. Further, the authors would
-like to express their gratitude to our project managers, Moris Behnam and Nils
-Müllner, for the guidance provided to us during the weekly project review
-meetings.  And last but not the least, the authors would like to express their
-gratitude to our technical experts, Mohammad Ashjaei and Nesredin Mahmud, for
-resolving our various technical questions.
+The authors wish to express their gratitude to Ning Xiong and Miguel Leon Ortiz
+for the guidance provided to us during the weekly project review meetings.
